--- a/hw2-test-generation/WindshieldWiper/wiper-test/pom.xml
+++ b/hw2-test-generation/WindshieldWiper/wiper-test/pom.xml
@@ -23,6 +23,12 @@
   </properties>
 
   <dependencies>
+	<dependency>
+      <groupId>junit</groupId>
+      <artifactId>junit</artifactId>
+      <version>4.13.2</version>
+      <scope>test</scope>
+    </dependency>
     <dependency>
       <groupId>hu.bme.mit.avt</groupId>
       <artifactId>wiper-api</artifactId>
